--- a/Setup/assets/pages/conclusion.html
+++ b/Setup/assets/pages/conclusion.html
@@ -1,3 +1,3 @@
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"></head><body><br/>
-<p style="margin: 0px; font: 13px 'Lucida Grande';"><b>THANKS FOR ISNTALLING!</b><br/>
+<p style="margin: 0px; font: 13px 'Lucida Grande';"><b>THANKS FOR INSTALLING!</b><br/>
 Please restart your daw, and then rescan for new plugins.</p></body></html>
